<resources>
    <string name="app_name">TouristApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="etEmail">Email/Login</string>
    <string name="etPassword">Password</string>
    <string name="login_title">LOGIN</string>
    <string name="send_password_reset_email">Send password reset email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_act">Create Account</string>

    <string name="Pusta_rejestracja">Login i hasło nie mogą być puste</string>

    <string name="LoginFailed">Błędny login lub hasło</string>
    <string name="uz_istnieje">Podany login jest zajety!</string>
    <string name="DataBase_failure">Błąd bazy danych!</string>
    <string name="rejestracja">User registered</string>
</resources>
